@@ -1,9 +1,10 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2006-08-17
+ChangeLog - 2006-08-18
 
 Version 0.2.0 (under dev!):
+   * IRC raw buffer now uses join/part prefix with color to display messages
    * added send of "quit" message to server when using /disconnect
    * fixed "wallops" command when received, now displayed by WeeChat (bug #17441)
    * fixed /wallops command (now many words are correctly sent)
